# TopMatchNBA

./: .pre-commit-config.yaml  README.md  makefile  pyproject.toml  response.json
.github/workflows/: tests.yml  update_data.yml
public/: games.json  index.html  script.js  style.css
public/data/: topmatchnba-01-01-2024.json  topmatchnba-01-01-2025.json  topmatchnba-01-02-2024.json  topmatchnba-01-02-2025.json  topmatchnba-01-03-2024.json  topmatchnba-01-03-2025.json  topmatchnba-01-04-2024.json  topmatchnba-01-05-2024.json  topmatchnba-01-11-2023.json  topmatchnba-01-11-2024.json  topmatchnba-01-12-2023.json  topmatchnba-01-12-2024.json  topmatchnba-02-01-2024.json  topmatchnba-02-01-2025.json  topmatchnba-02-02-2024.json  topmatchnba-02-02-2025.json  topmatchnba-02-03-2024.json  topmatchnba-02-03-2025.json  topmatchnba-02-04-2024.json  topmatchnba-02-05-2024.json  topmatchnba-02-11-2023.json  topmatchnba-02-11-2024.json  topmatchnba-02-12-2023.json  topmatchnba-02-12-2024.json  topmatchnba-03-01-2024.json  topmatchnba-03-01-2025.json  topmatchnba-03-02-2024.json  topmatchnba-03-02-2025.json  topmatchnba-03-03-2024.json  topmatchnba-03-03-2025.json  topmatchnba-03-04-2024.json  topmatchnba-03-05-2024.json  topmatchnba-03-11-2023.json  topmatchnba-03-11-2024.json  topmatchnba-03-12-2024.json  topmatchnba-04-01-2024.json  topmatchnba-04-01-2025.json  topmatchnba-04-02-2024.json  topmatchnba-04-02-2025.json  topmatchnba-04-03-2024.json  (+329 more)
tests/: main_test.py
topmatchnba/: data.py  main.py  rating.py  season.py
