[tool.poetry]
name = "topmatchnba"
version = "0.1.0"
description = ""
authors = ["Julio Marquez <marquezcastrojulio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nba-api = "^1.4.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
mypy = "^1.8.0"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]

[[tool.mypy.overrides]]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "docs", "build", "dist"]
